# Pioneer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmp.py
History/: Changelog.txt
History/Original/4.0vs4.0/: Results.txt
History/Original/v4.0vs4.2/: Results.txt
History/Previous/4.0vs4.1/: Results.txt
History/Previous/v4.1vs4.2/: Results.txt
src/: MoveSort.cpp  MoveSort.h  PieceTable.h  SIMD.h  SearchNode.cpp  SearchNode.h  bitboard.cpp  bitboard.h  board.cpp  board.h  color.h  direction.cpp  direction.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  magic.cpp  magic.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  piece.cpp  piece.h  platform.h  profile.cpp  profile.h  random.cpp  random.h  search.cpp  search.h  searchInfo.h  square.cpp  square.h  time.h  transposition.cpp  (+4 more)
src/nnue/: Accumulator.cpp  accumulator.h  accumulatorList.cpp  accumulatorList.h  halfkav2_hm.h  layer.h  nnue.cpp  nnue.h  subnet.cpp  subnet.h
util/: magicOut.txt  moveRead.py  perftTest.py  printBB.py
